Apply cherry-picked changes (from 0ae76e7)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Babful">
+        android:theme="@style/Theme.Babful"
+        android:name=".BabfulApplication">
         <activity
             android:name=".MainActivity"
             android:exported="true"
